--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     </head>
     <body>
 
-        <div class="circle top"></div>
-        <div class="circle bottom"></div>
-
         <main class="component">
             <section class="component__images">
                 <img class="component__images__background" src="images/bg-pattern-card.svg" alt="bg-card">
@@ -48,9 +45,9 @@
             </section>
 
         </main>
-        <div class="attribution">
+        <footer class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
             Coded by <a href="https://github.com/chanwinharold">chanwinharold</a>.
-        </div>
+        </footer>
     </body>
 </html>
